--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "query": "^0.2.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.3",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25"
